[gd_scene load_steps=48 format=3 uid="uid://du58bvqcbbd4m"]

[ext_resource type="Script" path="res://_scripts/characters/playerCharacter.gd" id="1_bqcj3"]
[ext_resource type="Script" path="res://_scripts/managers/spriteManager.gd" id="1_h3tqs"]
[ext_resource type="Script" path="res://_scripts/trail.gd" id="2_ec3si"]
[ext_resource type="Script" path="res://_scripts/managers/inputManager.gd" id="2_o34jp"]
[ext_resource type="Script" path="res://_scripts/managers/aimSystem.gd" id="2_tn1fw"]
[ext_resource type="Script" path="res://_scripts/states/stateMachine.gd" id="2_wlggo"]
[ext_resource type="Shader" path="res://_art/shaders/flash_effect.gdshader" id="3_j5jtd"]
[ext_resource type="Gradient" uid="uid://b6rxlnccc5uj0" path="res://_art/gradients/eyeTrail.tres" id="4_chr32"]
[ext_resource type="Script" path="res://_scripts/states/characterStates/playerStates/playerBodyIdle.gd" id="5_38e2w"]
[ext_resource type="Script" path="res://_scripts/characters/characterPart.gd" id="6_m4fku"]
[ext_resource type="Resource" uid="uid://c38qlr3m6jd5u" path="res://_scenes/characters/playerData.tres" id="9_m15tq"]
[ext_resource type="Script" path="res://_scripts/states/characterStates/playerStates/playerBodyWalk.gd" id="10_cshjn"]
[ext_resource type="Script" path="res://_scripts/states/characterStates/playerStates/playerLegsIdle.gd" id="11_esq4y"]
[ext_resource type="Texture2D" uid="uid://cdpegxkarim2h" path="res://_art/characterSpritesheets/11_Head_Idle.png" id="11_p6w45"]
[ext_resource type="Script" path="res://_scripts/states/characterStates/playerStates/playerLegsWalk.gd" id="12_qvctv"]
[ext_resource type="Texture2D" uid="uid://b34tma4wbogyc" path="res://_art/characterSpritesheets/11_Head_Walk.png" id="13_gdhx2"]
[ext_resource type="Texture2D" uid="uid://chf2ub8a6ycpd" path="res://_art/characterSpritesheets/09_Body_1HandMelee_Idle.png" id="13_k5wpq"]
[ext_resource type="Texture2D" uid="uid://bdat74vscmhi6" path="res://_art/characterSpritesheets/08_LeftArm_1HandMelee_Idle.png" id="14_skn0l"]
[ext_resource type="Texture2D" uid="uid://hvrt4jehgkmg" path="res://_art/characterSpritesheets/08_RightArm_1HandMelee_Idle.png" id="15_b30ra"]
[ext_resource type="Texture2D" uid="uid://b06qhctu1xsul" path="res://_art/characterSpritesheets/08_LeftArm_1HandMelee_Walk.png" id="16_a1iqv"]
[ext_resource type="Texture2D" uid="uid://e2ynx512aw8k" path="res://_art/characterSpritesheets/07_Hand_Fist_Type1.png" id="16_emp34"]
[ext_resource type="Texture2D" uid="uid://c13m070ywqfqa" path="res://_art/characterSpritesheets/12_Haircut_Walk.png" id="16_tpusx"]
[ext_resource type="Texture2D" uid="uid://cbs0i8mrtqwtt" path="res://_art/characterSpritesheets/03_Hips_Idle.png" id="17_14jb8"]
[ext_resource type="Texture2D" uid="uid://c3lqm3uj6x0yu" path="res://_art/characterSpritesheets/08_RightArm_1HandMelee_Walk.png" id="17_f5edv"]
[ext_resource type="Texture2D" uid="uid://cjo5xabb3mdyg" path="res://_art/characterSpritesheets/12_Haircut_Idle.png" id="18_mfmcr"]
[ext_resource type="Texture2D" uid="uid://cdkkiolbljbmc" path="res://_art/characterSpritesheets/10_Shirt_Short_1HandMelee_Idle.png" id="19_rqgkl"]
[ext_resource type="Texture2D" uid="uid://dcvkme0qa67rq" path="res://_art/characterSpritesheets/01_Legs_Idle.png" id="20_f1el7"]
[ext_resource type="Texture2D" uid="uid://7lk1c0augp5y" path="res://_art/characterSpritesheets/02_Shoes_Idle.png" id="21_7jyr0"]
[ext_resource type="Texture2D" uid="uid://bj1q1kvt0p0e1" path="res://_art/characterSpritesheets/03_Hips_Walk.png" id="21_46o7a"]
[ext_resource type="Texture2D" uid="uid://d03ij0k5ni3f3" path="res://_art/characterSpritesheets/04_Pants_Long_Idle.png" id="22_uhkj8"]
[ext_resource type="Texture2D" uid="uid://bciuchf2u14cn" path="res://_art/characterSpritesheets/01_Legs_Walk.png" id="23_by7ik"]
[ext_resource type="Texture2D" uid="uid://q8yrqdbexfbi" path="res://_art/characterSpritesheets/04_Pants_Long_Walk.png" id="23_e218m"]
[ext_resource type="Texture2D" uid="uid://dd7oivvg0ubi7" path="res://_art/characterSpritesheets/10_Shirt_Short_1HandMelee_Walk.png" id="26_4gy1f"]
[ext_resource type="Texture2D" uid="uid://cyc3ew8pmpi54" path="res://_art/characterSpritesheets/02_Shoes_Walk.png" id="29_2yh25"]

[sub_resource type="Animation" id="Animation_xljt6"]
resource_name = "Idle"
length = 0.60001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteManager:bodyFrame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteManager/SpritesContainer/BodySprite/HeadSprite:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(1, 0), Vector2(1, 0), Vector2(1, 0), Vector2(1, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteManager/SpritesContainer/BodySprite/LeftArmSprite/LeftHandSprite:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(10, -7), Vector2(11, -7), Vector2(12, -6), Vector2(12, -6), Vector2(11, -7), Vector2(10, -7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteManager/SpritesContainer/BodySprite/RightArmSprite/RightHandSprite:position")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(5, 9), Vector2(5, 10), Vector2(3, 11), Vector2(3, 11), Vector2(5, 10), Vector2(5, 9)]
}

[sub_resource type="Animation" id="Animation_opiqn"]
resource_name = "Idle"
length = 0.60001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteManager:legsFrame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_v5dbf"]
resource_name = "Walk"
length = 0.60001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteManager:legsFrame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_1g0h0"]
resource_name = "RESET"
length = 0.60001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteManager:bodyFrame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteManager/SpritesContainer/BodySprite/HeadSprite:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(1, 0), Vector2(1, 0), Vector2(1, 0), Vector2(1, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteManager/SpritesContainer/BodySprite/LeftArmSprite/LeftHandSprite:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(10, -7), Vector2(11, -7), Vector2(12, -6), Vector2(12, -6), Vector2(11, -7), Vector2(10, -7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteManager/SpritesContainer/BodySprite/RightArmSprite/RightHandSprite:position")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(5, 9), Vector2(5, 10), Vector2(3, 11), Vector2(3, 11), Vector2(5, 10), Vector2(5, 9)]
}

[sub_resource type="Animation" id="Animation_wfkmy"]
resource_name = "Walk"
length = 0.60001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteManager:bodyFrame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteManager/SpritesContainer/BodySprite/HeadSprite:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(1, 0), Vector2(1, 0), Vector2(0, 0), Vector2(1, 0), Vector2(1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteManager/SpritesContainer/BodySprite/LeftArmSprite/LeftHandSprite:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(10, -7), Vector2(11, -7), Vector2(12, -6), Vector2(10, -7), Vector2(9, -8), Vector2(7, -8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteManager/SpritesContainer/BodySprite/RightArmSprite/RightHandSprite:position")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(5, 9), Vector2(5, 10), Vector2(3, 11), Vector2(5, 9), Vector2(6, 9), Vector2(8, 8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2xpx7"]
_data = {
"Idle": SubResource("Animation_xljt6"),
"LegsIdle": SubResource("Animation_opiqn"),
"LegsWalk": SubResource("Animation_v5dbf"),
"RESET": SubResource("Animation_1g0h0"),
"Walk": SubResource("Animation_wfkmy")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a1kxy"]
resource_local_to_scene = true
shader = ExtResource("3_j5jtd")
shader_parameter/active = false
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 1.0
shader_parameter/alpha = 1.0
shader_parameter/pixelate_amount = 1.0

[sub_resource type="Curve" id="Curve_qrdy4"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.5), 0.0, 0.0, 0, 0]
point_count = 2
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="Gradient" id="Gradient_e30aq"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_xmj13"]
colors = PackedColorArray(1, 0, 0, 1, 1, 0, 0, 0)

[sub_resource type="Gradient" id="Gradient_tr2ij"]
colors = PackedColorArray(0, 1, 0.05, 1, 0, 1, 0.05, 0)

[sub_resource type="Gradient" id="Gradient_bcqlv"]
colors = PackedColorArray(0, 1, 0.75, 1, 0, 1, 0.75, 0)

[sub_resource type="Curve" id="Curve_yiet8"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="PlayerBody" type="CharacterBody2D"]
platform_on_leave = 2
script = ExtResource("1_bqcj3")
entityData = ExtResource("9_m15tq")
currentMoveSpeed = 50.0
drawEyes = true

[node name="AimSystem" type="Node2D" parent="." node_paths=PackedStringArray("characterBody")]
script = ExtResource("2_tn1fw")
characterBody = NodePath("..")

[node name="DashParticles" type="GPUParticles2D" parent="."]

[node name="InputManager" type="Node2D" parent="." node_paths=PackedStringArray("playerBody")]
script = ExtResource("2_o34jp")
playerBody = NodePath("..")

[node name="BodyStateMachine" type="Node2D" parent="." node_paths=PackedStringArray("initialState", "statesList")]
script = ExtResource("2_wlggo")
initialState = NodePath("IdleState")
statesList = [NodePath("IdleState"), NodePath("WalkState")]

[node name="IdleState" type="Node2D" parent="BodyStateMachine"]
script = ExtResource("5_38e2w")
playerData = ExtResource("9_m15tq")
stateName = "BodyIdle"
animationName = "Idle"

[node name="WalkState" type="Node2D" parent="BodyStateMachine"]
script = ExtResource("10_cshjn")
playerData = ExtResource("9_m15tq")
stateName = "BodyWalk"
animationName = "Walk"

[node name="LegsStateMachine" type="Node2D" parent="." node_paths=PackedStringArray("initialState", "statesList")]
script = ExtResource("2_wlggo")
initialState = NodePath("IdleState")
statesList = [NodePath("IdleState"), NodePath("WalkState")]

[node name="IdleState" type="Node2D" parent="LegsStateMachine"]
script = ExtResource("11_esq4y")
playerData = ExtResource("9_m15tq")
stateName = "LegsIdle"
animationName = "Idle"

[node name="WalkState" type="Node2D" parent="LegsStateMachine"]
script = ExtResource("12_qvctv")
playerData = ExtResource("9_m15tq")
stateName = "LegsWalk"
animationName = "Walk"

[node name="SpriteManager" type="Node2D" parent="." node_paths=PackedStringArray("HeadSprite", "BodySprite", "LeftArmSprite", "RightArmSprite", "LeftHandSprite", "RightHandSprite", "HaircutSprite", "ShirtSprite", "HipsSprite", "LegsSprite", "PantsSprite", "ShoesSprite")]
script = ExtResource("1_h3tqs")
HeadSprite = NodePath("SpritesContainer/BodySprite/HeadSprite")
BodySprite = NodePath("SpritesContainer/BodySprite")
LeftArmSprite = NodePath("SpritesContainer/BodySprite/LeftArmSprite")
RightArmSprite = NodePath("SpritesContainer/BodySprite/RightArmSprite")
LeftHandSprite = NodePath("SpritesContainer/BodySprite/LeftArmSprite/LeftHandSprite")
RightHandSprite = NodePath("SpritesContainer/BodySprite/RightArmSprite/RightHandSprite")
HaircutSprite = NodePath("SpritesContainer/BodySprite/HeadSprite/HaircutSprite")
ShirtSprite = NodePath("SpritesContainer/BodySprite/ShirtSprite")
HipsSprite = NodePath("SpritesContainer/HipsSprite")
LegsSprite = NodePath("SpritesContainer/HipsSprite/LegsSprite")
PantsSprite = NodePath("SpritesContainer/HipsSprite/LegsSprite/PantsSprite")
ShoesSprite = NodePath("SpritesContainer/HipsSprite/LegsSprite/ShoesSprite")

[node name="BodyAnimationPlayer" type="AnimationPlayer" parent="SpriteManager"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_2xpx7")
}

[node name="LegsAnimationPlayer" type="AnimationPlayer" parent="SpriteManager"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_2xpx7")
}

[node name="SpritesContainer" type="CanvasGroup" parent="SpriteManager"]
z_as_relative = false
material = SubResource("ShaderMaterial_a1kxy")

[node name="BodySprite" type="Sprite2D" parent="SpriteManager/SpritesContainer"]
z_index = 9
z_as_relative = false
use_parent_material = true
texture = ExtResource("13_k5wpq")
hframes = 6
script = ExtResource("6_m4fku")
displayName = "Body"
partIndex = 1
partLevel = 7

[node name="HeadSprite" type="Sprite2D" parent="SpriteManager/SpritesContainer/BodySprite" node_paths=PackedStringArray("parentPart")]
z_index = 11
z_as_relative = false
use_parent_material = true
texture = ExtResource("11_p6w45")
hframes = 6
script = ExtResource("6_m4fku")
displayName = "Head"
partLevel = 9
parentPart = NodePath("..")
spritesheetsAnimList = {
"Idle": ExtResource("11_p6w45"),
"Walk": ExtResource("13_gdhx2")
}

[node name="HaircutSprite" type="Sprite2D" parent="SpriteManager/SpritesContainer/BodySprite/HeadSprite" node_paths=PackedStringArray("parentPart")]
z_index = 12
z_as_relative = false
use_parent_material = true
texture = ExtResource("18_mfmcr")
hframes = 6
script = ExtResource("6_m4fku")
displayName = "Haircut"
partLevel = 10
parentPart = NodePath("..")
spritesheetsAnimList = {
"Idle": ExtResource("18_mfmcr"),
"Walk": ExtResource("16_tpusx")
}

[node name="Eye1" type="Node2D" parent="SpriteManager/SpritesContainer/BodySprite/HeadSprite"]
position = Vector2(4, -2)

[node name="Eye2" type="Node2D" parent="SpriteManager/SpritesContainer/BodySprite/HeadSprite"]
position = Vector2(4, 2)

[node name="LeftArmSprite" type="Sprite2D" parent="SpriteManager/SpritesContainer/BodySprite" node_paths=PackedStringArray("parentPart")]
z_index = 8
z_as_relative = false
use_parent_material = true
texture = ExtResource("14_skn0l")
hframes = 6
script = ExtResource("6_m4fku")
displayName = "LeftArm"
partIndex = 2
partLevel = 6
parentPart = NodePath("..")
spritesheetsAnimList = {
"Idle": ExtResource("14_skn0l"),
"Walk": ExtResource("16_a1iqv")
}

[node name="LeftHandSprite" type="Sprite2D" parent="SpriteManager/SpritesContainer/BodySprite/LeftArmSprite" node_paths=PackedStringArray("parentPart")]
z_index = 7
z_as_relative = false
use_parent_material = true
position = Vector2(10, -7)
texture = ExtResource("16_emp34")
hframes = 6
script = ExtResource("6_m4fku")
displayName = "LeftHand"
partIndex = 4
partLevel = 5
parentPart = NodePath("..")
spritesheetsAnimList = {
"Idle": ExtResource("16_emp34"),
"Walk": ExtResource("16_emp34")
}

[node name="RightArmSprite" type="Sprite2D" parent="SpriteManager/SpritesContainer/BodySprite" node_paths=PackedStringArray("parentPart")]
z_index = 8
z_as_relative = false
use_parent_material = true
texture = ExtResource("15_b30ra")
hframes = 6
script = ExtResource("6_m4fku")
displayName = "RightArm"
partIndex = 3
partLevel = 6
parentPart = NodePath("..")
spritesheetsAnimList = {
"Idle": ExtResource("15_b30ra"),
"Walk": ExtResource("17_f5edv")
}

[node name="RightHandSprite" type="Sprite2D" parent="SpriteManager/SpritesContainer/BodySprite/RightArmSprite" node_paths=PackedStringArray("parentPart")]
z_index = 7
z_as_relative = false
use_parent_material = true
position = Vector2(5, 9)
texture = ExtResource("16_emp34")
flip_v = true
hframes = 6
script = ExtResource("6_m4fku")
displayName = "RightHand"
partIndex = 5
partLevel = 5
parentPart = NodePath("..")
spritesheetsAnimList = {
"Idle": ExtResource("16_emp34"),
"Walk": ExtResource("16_emp34")
}

[node name="ShirtSprite" type="Sprite2D" parent="SpriteManager/SpritesContainer/BodySprite" node_paths=PackedStringArray("parentPart")]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0, 0.0166664, 1)
z_index = 10
z_as_relative = false
use_parent_material = true
texture = ExtResource("19_rqgkl")
hframes = 6
script = ExtResource("6_m4fku")
displayName = "Shirt"
partIndex = 1
partLevel = 8
partType = 1
parentPart = NodePath("..")
defaultColor = Color(1, 1, 1, 1)
spritesheetsAnimList = {
"Idle": ExtResource("19_rqgkl"),
"Walk": ExtResource("26_4gy1f")
}

[node name="HipsSprite" type="Sprite2D" parent="SpriteManager/SpritesContainer"]
z_index = 3
z_as_relative = false
use_parent_material = true
texture = ExtResource("17_14jb8")
hframes = 6
script = ExtResource("6_m4fku")
displayName = "Hips"
partIndex = 6
partLevel = 3
partPosition = 1
spritesheetsAnimList = {
"Idle": ExtResource("17_14jb8"),
"Walk": ExtResource("21_46o7a")
}

[node name="LegsSprite" type="Sprite2D" parent="SpriteManager/SpritesContainer/HipsSprite" node_paths=PackedStringArray("parentPart")]
z_index = 1
z_as_relative = false
use_parent_material = true
texture = ExtResource("20_f1el7")
hframes = 6
script = ExtResource("6_m4fku")
displayName = "Legs"
partIndex = 7
partLevel = 1
partPosition = 1
parentPart = NodePath("..")
spritesheetsAnimList = {
"Backward": ExtResource("20_f1el7"),
"Idle": ExtResource("20_f1el7"),
"Strafe": ExtResource("20_f1el7"),
"Walk": ExtResource("23_by7ik")
}

[node name="PantsSprite" type="Sprite2D" parent="SpriteManager/SpritesContainer/HipsSprite/LegsSprite" node_paths=PackedStringArray("parentPart")]
z_index = 4
z_as_relative = false
use_parent_material = true
texture = ExtResource("22_uhkj8")
hframes = 6
script = ExtResource("6_m4fku")
displayName = "Pants"
partIndex = 2
partLevel = 4
partType = 1
partPosition = 1
parentPart = NodePath("..")
spritesheetsAnimList = {
"Idle": ExtResource("22_uhkj8"),
"Walk": ExtResource("23_e218m")
}

[node name="ShoesSprite" type="Sprite2D" parent="SpriteManager/SpritesContainer/HipsSprite/LegsSprite" node_paths=PackedStringArray("parentPart")]
z_index = 2
z_as_relative = false
use_parent_material = true
texture = ExtResource("21_7jyr0")
hframes = 6
script = ExtResource("6_m4fku")
displayName = "Shoes"
partIndex = 3
partLevel = 2
partType = 1
partPosition = 1
parentPart = NodePath("..")
spritesheetsAnimList = {
"Idle": ExtResource("21_7jyr0"),
"Walk": ExtResource("29_2yh25")
}

[node name="Pointers" type="Node2D" parent="."]

[node name="AimPointer" type="Line2D" parent="Pointers"]
z_index = 3
z_as_relative = false
points = PackedVector2Array(0, 0, 100, 0)
width = 2.0
width_curve = SubResource("Curve_qrdy4")
gradient = SubResource("Gradient_e30aq")
joint_mode = 2
begin_cap_mode = 2
round_precision = 32

[node name="LookPointer" type="Line2D" parent="Pointers"]
z_index = 2
z_as_relative = false
points = PackedVector2Array(0, 0, 100, 0)
width = 2.0
width_curve = SubResource("Curve_qrdy4")
gradient = SubResource("Gradient_xmj13")
joint_mode = 2
begin_cap_mode = 2
round_precision = 32

[node name="MovePointer" type="Line2D" parent="Pointers"]
z_index = 1
z_as_relative = false
points = PackedVector2Array(0, 0, 100, 0)
width = 2.0
width_curve = SubResource("Curve_qrdy4")
gradient = SubResource("Gradient_tr2ij")
joint_mode = 2
begin_cap_mode = 2
round_precision = 32

[node name="InputPointer" type="Line2D" parent="Pointers"]
z_index = 1
z_as_relative = false
points = PackedVector2Array(0, 0, 100, 0)
width = 2.0
width_curve = SubResource("Curve_qrdy4")
gradient = SubResource("Gradient_bcqlv")
joint_mode = 2
begin_cap_mode = 2
round_precision = 32

[node name="EyeTrail1" type="Line2D" parent="."]
top_level = true
z_index = 10
z_as_relative = false
width = 0.75
width_curve = SubResource("Curve_yiet8")
gradient = ExtResource("4_chr32")
joint_mode = 1
begin_cap_mode = 2
round_precision = 32
antialiased = true
script = ExtResource("2_ec3si")
maxLength = 50

[node name="EyeTrail2" type="Line2D" parent="."]
top_level = true
z_index = 10
z_as_relative = false
width = 0.75
width_curve = SubResource("Curve_yiet8")
default_color = Color(1, 0, 0.0166664, 1)
gradient = ExtResource("4_chr32")
joint_mode = 1
begin_cap_mode = 2
round_precision = 32
antialiased = true
script = ExtResource("2_ec3si")
maxLength = 50
